crates/uitest/fixtures/ty_check/const_eval/trait_assoc_const_mismatch_span.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/const_eval/trait_assoc_const_mismatch_span.fe
---
error[3-0011]: given type doesn't match the expected const type
   ┌─ trait_assoc_const_mismatch_span.fe:11:23
   │  
11 │       const SIG: u256 = {
   │ ╭───────────────────────^
12 │ │         let x: u256 = 0
13 │ │     }
   │ ╰─────^ expected `u256` type here, but `()` is given

error[3-0023]: the expression cannot be evaluated at compile time
  ┌─ trait_assoc_const_mismatch_span.fe:8:17
  │
8 │ type Foo2 = Foo<{ Transfer::SIG }>
  │                 ^^^^^^^^^^^^^^^^^ unsupported in const evaluation
